@@ -19,6 +19,7 @@
  353556 make underline and bold conversion more sensible
  353453 position of a zoomed image should depend on where user clicked on image
  357631 watched threads filtering not persistent
+ 376759 request for task pane to show number and size of selected tasks
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
